--- a/index.html
+++ b/index.html
@@ -648,28 +648,27 @@ Before that, I received my Ph.D. in 2023, advised by Prof. <a href="https://scho
 <section id="activities" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
-<div class="row">  
+<div class="row">
     <div class="col-lg-12">
-      <h1>Academic Activities</h1>      
+      <h1>Academic Activities</h1>
       <h2 id="talks">Talks</h2>
 <ul>
 
-<li>Rolling Shutter Camera: Modeling, Optimization and Learning (Academic Talk, online), Macao Polytechnic University, China, Dec 2023</li>
-<li><a href="https://cvpr2023.thecvf.com/Conferences/2023/tutorial-list"><b>Co-organizer of CVPR 2023 Tutorial</b></a> on <a href="https://rstutorial.github.io/">Rolling Shutter Camera: Modeling, Optimization, Learning and Hardware</a>, Vancouver, Canada, Jun 2023</li>
-<li>Research Experience Sharing and Discussion (No. 170, Weituo), School of Electronics and Information, NPU, Xi'an, China, Apr 2023</li>
-<li><a href="https://accv2022.org/en/TUTORIALS.html"><b>Co-organizer of ACCV 2022 Tutorial</b></a> on <a href="https://npucvr.github.io/RS_Survey/">Rolling Shutter Camera: Modeling, Optimization and Learning</a>, Macau SAR, China, Dec 2022</li>
-<li>Vision and Learning Seminar (VALSE), Tianjin, China, Aug 2022</li>
-<li>Conference on Computer Vision and Pattern Recognition (Poster Presentation), Virtual attendance, Jun 2022</li>
-<li>Get a Footage without Rolling Shutter Effect (Academic Talk), Samsung, Xi'an, China, Nov 2021</li>
-<li>International Conference on Computer Vision (Poster Presentation), Virtual attendance, Oct 2021</li>
-<li>Vision and Learning Seminar (VALSE), Hefei, China, Apr 2019</li>
-<li>International Conference on Control and Automation (Oral Presentation), Anchorage, USA, Jun 2018</li>
-<li>International Conference on Unmanned Systems (Oral Presentation), Beijing, China, Oct 2017</li>
-</ul>
-      <h2 id="services">Services</h2>
-<ul>
-<li>Journal Reviewer: TPAMI, IJCV, NAT COMMUN, TMM, Journal of Sensors</li>
-<li>Conference Reviewer: CVPR 2022-2023, ECCV 2022, ICCV 2023, ICRA 2023, IROS 2021, ICME 2020-2021</li>
+<!--<li>Rolling Shutter Camera: Modeling, Optimization and Learning (Academic Talk, online), Macao Polytechnic University, China, Dec 2023</li>-->
+<!--<li><a href="https://cvpr2023.thecvf.com/Conferences/2023/tutorial-list"><b>Co-organizer of CVPR 2023 Tutorial</b></a> on <a href="https://rstutorial.github.io/">Rolling Shutter Camera: Modeling, Optimization, Learning and Hardware</a>, Vancouver, Canada, Jun 2023</li>-->
+<!--<li>Research Experience Sharing and Discussion (No. 170, Weituo), School of Electronics and Information, NPU, Xi'an, China, Apr 2023</li>-->
+<!--<li><a href="https://accv2022.org/en/TUTORIALS.html"><b>Co-organizer of ACCV 2022 Tutorial</b></a> on <a href="https://npucvr.github.io/RS_Survey/">Rolling Shutter Camera: Modeling, Optimization and Learning</a>, Macau SAR, China, Dec 2022</li>-->
+<!--<li>Vision and Learning Seminar (VALSE), Tianjin, China, Aug 2022</li>-->
+<!--<li>Conference on Computer Vision and Pattern Recognition (Poster Presentation), Virtual attendance, Jun 2022</li>-->
+<!--<li>Get a Footage without Rolling Shutter Effect (Academic Talk), Samsung, Xi'an, China, Nov 2021</li>-->
+<!--<li>International Conference on Computer Vision (Poster Presentation), Virtual attendance, Oct 2021</li>-->
+<!--<li>Vision and Learning Seminar (VALSE), Hefei, China, Apr 2019</li>-->
+<!--<li>International Conference on Control and Automation (Oral Presentation), Anchorage, USA, Jun 2018</li>-->
+<!--<li>International Conference on Unmanned Systems (Oral Presentation), Beijing, China, Oct 2017</li>-->
+<!--</ul>-->
+<!--      <h2 id="services">Services</h2>-->
+<!--<ul>-->
+<li>Reviewer:  TIP, TMI, PR, RAL, etc</li>
 </ul>
     </div>
 </div>
