--- a/index.html
+++ b/index.html
@@ -648,11 +648,11 @@ Before that, I received my Ph.D. in 2023, advised by Prof. <a href="https://scho
 <section id="activities" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
-<div class="row">
-    <div class="col-lg-12">
-      <h1>Academic Activities</h1>
-      <h2 id="talks">Talks</h2>
-<ul>
+<!--<div class="row">-->
+<!--    <div class="col-lg-12">-->
+<!--      <h1>Academic Activities</h1>-->
+<!--      <h2 id="talks">Talks</h2>-->
+<!--<ul>-->
 
 <!--<li>Rolling Shutter Camera: Modeling, Optimization and Learning (Academic Talk, online), Macao Polytechnic University, China, Dec 2023</li>-->
 <!--<li><a href="https://cvpr2023.thecvf.com/Conferences/2023/tutorial-list"><b>Co-organizer of CVPR 2023 Tutorial</b></a> on <a href="https://rstutorial.github.io/">Rolling Shutter Camera: Modeling, Optimization, Learning and Hardware</a>, Vancouver, Canada, Jun 2023</li>-->
@@ -668,7 +668,7 @@ Before that, I received my Ph.D. in 2023, advised by Prof. <a href="https://scho
 <!--</ul>-->
 <!--      <h2 id="services">Services</h2>-->
 <!--<ul>-->
-<li>Reviewer:  TIP, TMI, PR, RAL, etc</li>
+<li>Reviewer of TIP, TMI, PR, RAL, etc</li>
 </ul>
     </div>
 </div>
