--- a/index.html
+++ b/index.html
@@ -623,21 +623,22 @@ Before that, I received my Ph.D. in 2023, advised by Prof. <a href="https://scho
 <ul>
 
   
-<li><a href="http://123.138.24.155:30080/org/pazhoulab/competition/area/64a785c80890cb0bf38b1115/content/7"><b>Second Prize of Guangdong-Hong Kong-Macao Greater Bay Area (Huangpu) International Algorithm Challenge</b></a>, Video Frame Interpolation in Fast Motion Scenes, 2023</li>  
-<li><a href="https://jj.chinapostdoctor.org.cn/website/showinfo.html?infoid=1dd1973a-110f-4140-9119-40deb0784c07"><b>National Postdoctoral Innovative Talent Support Program</b></a>, China Postdoctoral Science Foundation, 2023</li>
-<li><a href="https://ecampus.nwpu.edu.cn/main.html#/newsDetail?id=8aaa9135879cd49801885177884f2ff1&from=globalSearch"><b>Outstanding Graduate of Shaanxi Province</b></a>, Shaanxi, China, 2023</li>
-<li>Outstanding Doctoral Graduate, Northwestern Polytechnical University, China, 2023</li>
-<li><a href="http://postdocs.pku.edu.cn/zpxx/145853.htm"><b>Peking University Boya Postdoctoral Fellowship</b></a>, 2022</li>
-<li><a href="https://ecampus.nwpu.edu.cn/main.html#/newsDetail?id=8aaa9912847fd1d201848d8123e952af&columnId=B9CC1F1E8A5C82B8E053650A280A0232"><b>Postgraduate "Academic Star" of Northwestern Polytechnic University</b></a>, 2022</li>
-<li><a href="https://mp.weixin.qq.com/s/btPSFAqck-_ABQ0YOTsQKQ"><b>Second Prize of Huawei Academic Star Competition</b></a>, 2022</li>
-<li><a href="https://cvpr2022.thecvf.com/doctoral-consortium"><b>CVPR 2022 Doctoral Consortium</b></a> (Mentor: Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=YYH0BjEAAAAJ&view_op=list_works&sortby=pubdate">Marc Pollefeys</a>), 2022</li>
-<li>Outstanding Master Graduate, Northwestern Polytechnical University, China, 2019</li>
-<li>National Scholarship, 2018</li>
-<li>Third-Class of Northwest Division of 13th Graduate Electronic Design Competition, 2018</li>
-<li>Best Paper Candidate at IEEE 14th International Conference on Control and Automation (ICCA), 2018</li>
-<li>Outstanding Undergraduate Student, Northwestern Polytechnical University, China, 2016</li>
-<li>Outstanding Volunteer of 12th International Conference on Intelligent Unmanned Systems, 2016</li>
-<li>First-Class Academic Scholarship of Northwestern Polytechnical University, 2013-2020</li>
+<!--<li><a href="http://123.138.24.155:30080/org/pazhoulab/competition/area/64a785c80890cb0bf38b1115/content/7"><b>Second Prize of Guangdong-Hong Kong-Macao Greater Bay Area (Huangpu) International Algorithm Challenge</b></a>, Video Frame Interpolation in Fast Motion Scenes, 2023</li>  -->
+<!--<li><a href="https://jj.chinapostdoctor.org.cn/website/showinfo.html?infoid=1dd1973a-110f-4140-9119-40deb0784c07"><b>National Postdoctoral Innovative Talent Support Program</b></a>, China Postdoctoral Science Foundation, 2023</li>-->
+<!--<li><a href="https://ecampus.nwpu.edu.cn/main.html#/newsDetail?id=8aaa9135879cd49801885177884f2ff1&from=globalSearch"><b>Outstanding Graduate of Shaanxi Province</b></a>, Shaanxi, China, 2023</li>-->
+<!--<li>Outstanding Doctoral Graduate, Northwestern Polytechnical University, China, 2023</li>-->
+<!--<li><a href="http://postdocs.pku.edu.cn/zpxx/145853.htm"><b>Peking University Boya Postdoctoral Fellowship</b></a>, 2022</li>-->
+<!--<li><a href="https://ecampus.nwpu.edu.cn/main.html#/newsDetail?id=8aaa9912847fd1d201848d8123e952af&columnId=B9CC1F1E8A5C82B8E053650A280A0232"><b>Postgraduate "Academic Star" of Northwestern Polytechnic University</b></a>, 2022</li>-->
+<!--<li><a href="https://mp.weixin.qq.com/s/btPSFAqck-_ABQ0YOTsQKQ"><b>Second Prize of Huawei Academic Star Competition</b></a>, 2022</li>-->
+<!--<li><a href="https://cvpr2022.thecvf.com/doctoral-consortium"><b>CVPR 2022 Doctoral Consortium</b></a> (Mentor: Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=YYH0BjEAAAAJ&view_op=list_works&sortby=pubdate">Marc Pollefeys</a>), 2022</li>-->
+<li><b>1<sup>st</sup></b> in Argoverse Stereo Competition (CVPR 2021 Workshop), 2021</li>
+<li><b>1<sup>st</sup></b> in stereo track of Robust Vision Challenge 2020 (ECCV2020 Workshop), 2020</li>
+<li>National Scholarship (Top 1% in Northwestern Polytechnical University), 2016-2017</li>
+<!--<li>Third-Class of Northwest Division of 13th Graduate Electronic Design Competition, 2018</li>-->
+<!--<li>Best Paper Candidate at IEEE 14th International Conference on Control and Automation (ICCA), 2018</li>-->
+<!--<li>Outstanding Undergraduate Student, Northwestern Polytechnical University, China, 2016</li>-->
+<!--<li>Outstanding Volunteer of 12th International Conference on Intelligent Unmanned Systems, 2016</li>-->
+<!--<li>First-Class Academic Scholarship of Northwestern Polytechnical University, 2013-2020</li>-->
 </ul>
     </div>
 </div>
@@ -648,11 +649,11 @@ Before that, I received my Ph.D. in 2023, advised by Prof. <a href="https://scho
 <section id="activities" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
 
-<!--<div class="row">-->
-<!--    <div class="col-lg-12">-->
-<!--      <h1>Academic Activities</h1>-->
+<div class="row">
+    <div class="col-lg-12">
+      <h1>Academic Activities</h1>
 <!--      <h2 id="talks">Talks</h2>-->
-<!--<ul>-->
+<ul>
 
 <!--<li>Rolling Shutter Camera: Modeling, Optimization and Learning (Academic Talk, online), Macao Polytechnic University, China, Dec 2023</li>-->
 <!--<li><a href="https://cvpr2023.thecvf.com/Conferences/2023/tutorial-list"><b>Co-organizer of CVPR 2023 Tutorial</b></a> on <a href="https://rstutorial.github.io/">Rolling Shutter Camera: Modeling, Optimization, Learning and Hardware</a>, Vancouver, Canada, Jun 2023</li>-->
