--- a/index.html
+++ b/index.html
@@ -172,10 +172,16 @@
 
     
 <br>
-<p>I am currently a postdoctoral researcher working with Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=K1LjZxcAAAAJ">Boxin Shi</a> and <a href="https://scholar.google.com/citations?user=3J8OquAAAAAJ&hl=zh-CN">Chao Xu</a> at <a href="https://camera.pku.edu.cn/People.htm">Camera Intelligence Lab</a>, Peking University (PKU).
-Before that, I received my Ph.D. in 2023, advised by Prof. <a href="https://scholar.google.com/citations?user=fddAbqsAAAAJ&hl=zh-CN">Yuchao Dai</a>, at the School of Electronics and Information, Northwestern Polytechnical University (NPU), Xi'an, China.</p>
+<!--<p>I am currently a postdoctoral researcher working with Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=K1LjZxcAAAAJ">Boxin Shi</a> and <a href="https://scholar.google.com/citations?user=3J8OquAAAAAJ&hl=zh-CN">Chao Xu</a> at <a href="https://camera.pku.edu.cn/People.htm">Camera Intelligence Lab</a>, Peking University (PKU).-->
+<!--Before that, I received my Ph.D. in 2023, advised by Prof. <a href="https://scholar.google.com/citations?user=fddAbqsAAAAJ&hl=zh-CN">Yuchao Dai</a>, at the School of Electronics and Information, Northwestern Polytechnical University (NPU), Xi'an, China.</p>-->
 
-<p> My research mainly focuses on camera pose estimation, image rectification, temporal super-resolution, and 3D reconstruction, especially regarding the rolling shutter camera. I am also interested in low-level geometric problems (e.g. structure from motion, SLAM) and image restoration tasks (e.g. deblurring).
+<!--<p> My research mainly focuses on camera pose estimation, image rectification, temporal super-resolution, and 3D reconstruction, especially regarding the rolling shutter camera. I am also interested in low-level geometric problems (e.g. structure from motion, SLAM) and image restoration tasks (e.g. deblurring).-->
+<!--</p>-->
+<p>I am currently a senior researcher at Baidu. Before that, I received my master degree in signal and information processing from Peking University in 2022
+    and my B.E. degree, advised by Prof. <a href="https://scholar.google.com/citations?user=fddAbqsAAAAJ&hl=zh-CN">Yuchao Dai</a>,
+    at the School of Electronics and Information, Northwestern Polytechnical University in 2019.</p>
+
+<p> My research mainly focuses on depth estimation especially regarding the binocular depth estimation. I am also interested in 3D reconstruction (e.g. NeRF, 3D Gaussian Splatting) and diffusion tasks (e.g. Text to video generation).
 </p>
 
     <div class="row">
