--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <br>
 <!--      <a href="cv/Resume_binfan.pdf"><b>CV</b></a>-->
 <!--        | <a href="cv/Resume_binfan_CN.pdf"><b>CV_CN</b></a>-->
-        | <a href="https://scholar.google.com/citations?user=pfzhh0IAAAAJ&hl=zh-CN&oi=ao"><b>Google Scholar</b></a>
+        <a href="https://scholar.google.com/citations?user=pfzhh0IAAAAJ&hl=zh-CN&oi=ao"><b>Google Scholar</b></a>
         | <a href="https://github.com/gallenszl"><b>Github</b></a>
       <br>
       <br>
@@ -311,12 +311,13 @@
               <img src="/papers/images/TPAMI_2024_lbcnet.png" class="img-responsive" alt="">
             </div>
           <div class="description">
-            <p class="title">Learning Bilateral Cost Volume for Rolling Shutter Temporal Super-Resolution</p>
-            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>
+            <p class="title">Digging Into Uncertainty-Based Pseudo-Label for Robust Stereo Matching</p>
+            <p class="authors"><b>Zhelun Shen</b>, Xibin Song, Yuchao Dai, Dingfu Zhou, Zhibo Rao, Liangjun Zhang</p>
+<!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>-->
             <p class="institution">IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2024 <span style="font-weight:lighter"></span></p>
             <p class="resources">
               [
-                <a href = "https://npucvr.github.io/LBCNet/">Project Page</a> | <a href = "https://ieeexplore.ieee.org/document/10382595">Paper</a> | <a href = "https://github.com/GitCVfb/LBCNet">Code</a> | <a href = "https://ieeexplore.ieee.org/document/10382595">Supplementary Video</a>
+                <a href = "https://arxiv.org/pdf/2307.16509.pdf">Paper</a> | <a href = "https://github.com/gallenszl/UCFNet">Code</a>
               ]
             </p>
           </div> 
@@ -327,12 +328,14 @@
               <img src="/papers/images/TPAMI_2022_rs2sr.png" class="img-responsive" alt="">
             </div>
           <div class="description">
-            <p class="title">Rolling Shutter Inversion: Bring Rolling Shutter Images to High Framerate Global Shutter Video</p>
+            <p class="title">PCW-Net: Pyramid Combination and Warping Cost Volume for Stereo Matching</p>
             <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>
-            <p class="institution">IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2023 <span style="font-weight:lighter"></span></p>
+            <p class="authors"><b>Zhelun Shen</b>, Yuchao Dai, Xibin Song, Zhibo Rao, Dingfu Zhou, Liangjun Zhang</p>
+            <p class="institution">European Conference on Computer Vision (<b>ECCV</b>), 2023 <span style="font-weight:lighter"></span></p>
+            <p class="institution"> <strong><span style="color:red;">Oral</span>with 2.7% acceptance rate</strong> </p>
             <p class="resources">
               [
-                <a href = "https://ieeexplore.ieee.org/document/9926197/keywords#keywords">Paper</a> | <a href = "https://github.com/GitCVfb/RSSR">Code</a> | <a href = "https://ieeexplore.ieee.org/document/9926197/keywords#keywords">Supplementary Video</a>
+                <a href = "https://link.springer.com/chapter/10.1007/978-3-031-19824-3_17">Paper</a> | <a href = "https://github.com/gallenszl/PCWNet">Code</a>
               ]
             </p>
           </div> 
