--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
             </div>
           <div class="description">
             <p class="title">PCW-Net: Pyramid Combination and Warping Cost Volume for Stereo Matching</p>
-            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>
+<!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>-->
             <p class="authors"><b>Zhelun Shen</b>, Yuchao Dai, Xibin Song, Zhibo Rao, Dingfu Zhou, Liangjun Zhang</p>
-            <p class="institution">European Conference on Computer Vision (<b>ECCV</b>), 2023 <span style="font-weight:lighter"></span></p>
-            <p class="institution"> <strong><span style="color:red;">Oral</span>with 2.7% acceptance rate</strong> </p>
+            <p class="institution">European Conference on Computer Vision (<b>ECCV</b>), 2022(<strong><span style="color:red;">Oral</span>with 2.7% acceptance rate</strong>) <span style="font-weight:lighter"></span></p>
+<!--            <p class="institution"> <strong><span style="color:red;">Oral</span>with 2.7% acceptance rate</strong> </p>-->
             <p class="resources">
               [
                 <a href = "https://link.springer.com/chapter/10.1007/978-3-031-19824-3_17">Paper</a> | <a href = "https://github.com/gallenszl/PCWNet">Code</a>
