--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <p class="title">PCW-Net: Pyramid Combination and Warping Cost Volume for Stereo Matching</p>
 <!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>-->
             <p class="authors"><b>Zhelun Shen</b>, Yuchao Dai, Xibin Song, Zhibo Rao, Dingfu Zhou, Liangjun Zhang</p>
-            <p class="institution">European Conference on Computer Vision (<b>ECCV</b>), 2022(<strong><span style="color:red;">Oral</span>with 2.7% acceptance rate</strong>) <span style="font-weight:lighter"></span></p>
+            <p class="institution">European Conference on Computer Vision (<b>ECCV</b>), 2022 (<strong><span style="color:red;">Oral</span> with 2.7% acceptance rate</strong>) <span style="font-weight:lighter"></span></p>
 <!--            <p class="institution"> <strong><span style="color:red;">Oral</span>with 2.7% acceptance rate</strong> </p>-->
             <p class="resources">
               [
@@ -363,9 +363,9 @@
             </div>
           <div class="description">
             <p class="title">Digging into Depth Priors for Outdoor Neural Radiance Fields</p>
-                          <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Zhiyuan Zhang, Qi Liu, Mingyi He</p>
-            <p class="authors">Chen Wang, Jiadai Sun, Lina Liu, Chenming Wu<sup>*</sup>, <b>Zhelun Shen<sup>*</sup><b>, Dayan Wu, Yuchao Dai, Liangjun Zhang(<b> * denotes corresponding author<b>)</p>
-            <p class="institution">Proceedings of the 31th ACM International Conference on Multimedia (<b>ACMMM</b>), 2023(<strong><span style="color:red;">Oral</span></strong>) <span style="font-weight:lighter"></span></p>
+            <p class="authors">Chen Wang, Jiadai Sun, Lina Liu, Chenming Wu<sup>*</sup>, <b>Zhelun Shen<sup>*</sup><b>, Dayan Wu, Yuchao Dai, Liangjun Zhang</p>
+              <p class="authors"><b> * denotes corresponding author<b></p>
+            <p class="institution">Proceedings of the 31th ACM International Conference on Multimedia (<b>ACMMM</b>), 2023 (<strong><span style="color:red;">Oral</span></strong>) <span style="font-weight:lighter"></span></p>
             <p class="resources">
               [
                 <a href = "https://cwchenwang.github.io/outdoor-nerf-depth/">Project Page</a> | <a href = "https://cwchenwang.github.io/outdoor-nerf-depth/data/paper.pdf">Paper</a> | <a href = "https://github.com/cwchenwang/outdoor-nerf-depth">Code</a>
