--- a/index.html
+++ b/index.html
@@ -341,33 +341,13 @@
           </div> 
         </li>
 
-
-        <li>
-            <div class="img">
-              <img src="/papers/images/TPAMI_2022_rs2sr.png" class="img-responsive" alt="">
-            </div>
-          <div class="description">
-            <p class="title">PCW-Net: Pyramid Combination and Warping Cost Volume for Stereo Matching</p>
-<!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>-->
-            <p class="authors"><b>Zhelun Shen</b>, Yuchao Dai, Xibin Song, Zhibo Rao, Dingfu Zhou, Liangjun Zhang</p>
-            <p class="institution">European Conference on Computer Vision (<b>ECCV</b>), 2022 (<strong><span style="color:red;">Oral</span> with 2.7% acceptance rate</strong>) <span style="font-weight:lighter"></span></p>
-<!--            <p class="institution"> <strong><span style="color:red;">Oral</span>with 2.7% acceptance rate</strong> </p>-->
-            <p class="resources">
-              [
-                <a href = "https://link.springer.com/chapter/10.1007/978-3-031-19824-3_17">Paper</a> | <a href = "https://github.com/gallenszl/PCWNet">Code</a>
-              ]
-            </p>
-          </div>
-        </li>
-
-
         <li>
             <div class="img">
               <img src="/papers/images/CFNet.png" class="img-responsive" alt="">
             </div>
           <div class="description">
             <p class="title">Cfnet: Cascade and fused cost volume for robust stereo matching</p>
-            <p class="authors"><b>Zhelun Shen<b>, Yuchao Dai, Zhibo Rao</p>
+            <p class="authors"><b>Zhelun Shen</b>, Yuchao Dai, Zhibo Rao</p>
             <p class="institution">IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021 <span style="font-weight:lighter"></span></p>
             <p class="resources">
               [
@@ -383,7 +363,7 @@
             </div>
           <div class="description">
             <p class="title">Digging into Depth Priors for Outdoor Neural Radiance Fields</p>
-            <p class="authors">Chen Wang, Jiadai Sun, Lina Liu, Chenming Wu<sup>*</sup>, <b>Zhelun Shen<sup>*</sup><b>, Dayan Wu, Yuchao Dai, Liangjun Zhang</p>
+            <p class="authors">Chen Wang, Jiadai Sun, Lina Liu, Chenming Wu<sup>*</sup>, <b>Zhelun Shen<sup>*</sup></b>, Dayan Wu, Yuchao Dai, Liangjun Zhang</p>
               <p class="authors"><b> * denotes corresponding author<b></p>
             <p class="institution">Proceedings of the 31th ACM International Conference on Multimedia (<b>ACMMM</b>), 2023 (<strong><span style="color:red;">Oral</span></strong>) <span style="font-weight:lighter"></span></p>
             <p class="resources">
