--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           <div class="description">
             <p class="title">Digging into Depth Priors for Outdoor Neural Radiance Fields</p>
             <p class="authors">Chen Wang, Jiadai Sun, Lina Liu, Chenming Wu<sup>*</sup>, <b>Zhelun Shen<sup>*</sup></b>, Dayan Wu, Yuchao Dai, Liangjun Zhang</p>
-              <p class="authors"><b> * denotes corresponding author<b></p>
+              <p class="authors"><b> * denotes corresponding author</b></p>
             <p class="institution">Proceedings of the 31th ACM International Conference on Multimedia (<b>ACMMM</b>), 2023 (<strong><span style="color:red;">Oral</span></strong>) <span style="font-weight:lighter"></span></p>
             <p class="resources">
               [
