--- a/index.html
+++ b/index.html
@@ -374,53 +374,53 @@
           </div> 
         </li>
           
-<!--        <li>-->
-<!--            <div class="img">-->
-<!--              <img src="/papers/images/ICCV_2021_rs2sr.jpg" class="img-responsive" alt="">-->
-<!--            </div>-->
-<!--          <div class="description">-->
-<!--            <p class="title">Inverting a Rolling Shutter Camera: Bring Rolling Shutter Images to High Framerate Global Shutter Video</p>-->
-<!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai</p>-->
-<!--            <p class="institution">IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 <span style="font-weight:lighter"></span></p>-->
-<!--            <p class="resources">-->
-<!--              [-->
-<!--                <a href = "https://npucvr.github.io/RSSR/">Project Page</a> | <a href = "http://openaccess.thecvf.com/content/ICCV2021/papers/Fan_Inverting_a_Rolling_Shutter_Camera_Bring_Rolling_Shutter_Images_to_ICCV_2021_paper.pdf">Paper</a> | <a href = "posters/poster-PDF-1876.pdf">Poster</a> | <a href = "https://github.com/GitCVfb/RSSR">Code</a>-->
-<!--              ]-->
-<!--            </p>-->
-<!--          </div> -->
-<!--        </li>-->
-<!--          -->
-<!--        <li>-->
-<!--            <div class="img">-->
-<!--              <img src="/papers/images/ICCV_2021_sunet.jpg" class="img-responsive" alt="">-->
-<!--            </div>-->
-<!--          <div class="description">-->
-<!--            <p class="title">SUNet: Symmetric Undistortion Network for Rolling Shutter Correction</p>-->
-<!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Mingyi He</p>-->
-<!--            <p class="institution">IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 <span style="font-weight:lighter"></span></p>-->
-<!--            <p class="resources">-->
-<!--              [-->
-<!--                <a href = "https://npucvr.github.io/SUNet/">Project Page</a> | <a href = "https://openaccess.thecvf.com/content/ICCV2021/papers/Fan_SUNet_Symmetric_Undistortion_Network_for_Rolling_Shutter_Correction_ICCV_2021_paper.pdf">Paper</a> | <a href = "posters/poster-PDF-6199.pdf">Poster</a> | <a href = "https://github.com/GitCVfb/SUNet">Code</a>-->
-<!--              ]-->
-<!--            </p>-->
-<!--          </div> -->
-<!--        </li>-->
-<!--                -->
-<!--        <li>-->
-<!--            <div class="img">-->
-<!--              <img src="/papers/images/CVIU_2021_standard_RSS.jpg" class="img-responsive" alt="">-->
-<!--            </div>-->
-<!--          <div class="description">-->
-<!--            <p class="title">Rolling-Shutter-Stereo-Aware Motion Estimation and Image Correction</p>-->
-<!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Ke Wang</p>-->
-<!--            <p class="institution">Computer Vision and Image Understanding (<b>CVIU</b>), 2021 <span style="font-weight:lighter"></span></p>-->
-<!--            <p class="resources">-->
-<!--              [-->
-<!--                <a href = "https://npucvr.github.io/Standard_RSS/">Project Page</a> | <a href = "https://www.sciencedirect.com/science/article/pii/S1077314221001405">Paper</a>-->
-<!--              ]-->
-<!--            </p>-->
-<!--          </div> -->
-<!--        </li>-->
+        <li>
+            <div class="img">
+              <img src="/papers/images/ICCV_2021_rs2sr.jpg" class="img-responsive" alt="">
+            </div>
+          <div class="description">
+            <p class="title">Masked representation learning for domain generalized stereo matching</p>
+            <p class="authors">Zhibo Rao, Bangshu Xiong, Mingyi He, Yuchao Dai, Renjie He, <b>Zhelun Shen</b>, Xing Li</p>
+            <p class="institution">IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023 <span style="font-weight:lighter"></span></p>
+            <p class="resources">
+              [
+                <a href = "https://openaccess.thecvf.com/content/CVPR2023/papers/Rao_Masked_Representation_Learning_for_Domain_Generalized_Stereo_Matching_CVPR_2023_paper.pdf">Paper</a>
+              ]
+            </p>
+          </div>
+        </li>
+
+        <li>
+            <div class="img">
+              <img src="/papers/images/ICCV_2021_sunet.jpg" class="img-responsive" alt="">
+            </div>
+          <div class="description">
+            <p class="title">TUSR-Net: Triple Unfolding Single Image Dehazing With Self-Regularization and Dual Feature to Pixel Attention</p>
+            <p class="authors">Xibin Song, Dingfu Zhou, Wei Li, Yuchao Dai, <b>Zhelun Shen</b>, Liangjun Zhang, Hongdong Li</p>
+            <p class="institution">IEEE Transactions on Image Processing (<b>TIP</b>), 2023 <span style="font-weight:lighter"></span></p>
+            <p class="resources">
+              [
+                <a href = "https://ieeexplore.ieee.org/abstract/document/10043627/">Paper</a>
+              ]
+            </p>
+          </div>
+        </li>
+
+        <li>
+            <div class="img">
+              <img src="/papers/images/CVIU_2021_standard_RSS.jpg" class="img-responsive" alt="">
+            </div>
+          <div class="description">
+            <p class="title">Rethinking training strategy in stereo matching</p>
+            <p class="authors">Zhibo Rao, Yuchao Dai, <b>Zhelun Shen</b>, Renjie He</p>
+            <p class="institution">IEEE Transactions on Neural Networks and Learning Systems (<b>TNNLS</b>), 2022 <span style="font-weight:lighter"></span></p>
+            <p class="resources">
+              [
+                <a href = "https://ieeexplore.ieee.org/abstract/document/9709604">Paper</a>
+              ]
+            </p>
+          </div>
+        </li>
 <!--          -->
 <!--        <li>-->
 <!--            <div class="img">-->
