--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           
         <li>
             <div class="img">
-              <img src="/papers/images/ICCV_2021_rs2sr.jpg" class="img-responsive" alt="">
+              <img src="/papers/images/CVPR2023.png" class="img-responsive" alt="">
             </div>
           <div class="description">
             <p class="title">Masked representation learning for domain generalized stereo matching</p>
@@ -392,7 +392,7 @@
 
         <li>
             <div class="img">
-              <img src="/papers/images/ICCV_2021_sunet.jpg" class="img-responsive" alt="">
+              <img src="/papers/images/TIP2023.png" class="img-responsive" alt="">
             </div>
           <div class="description">
             <p class="title">TUSR-Net: Triple Unfolding Single Image Dehazing With Self-Regularization and Dual Feature to Pixel Attention</p>
@@ -408,7 +408,7 @@
 
         <li>
             <div class="img">
-              <img src="/papers/images/CVIU_2021_standard_RSS.jpg" class="img-responsive" alt="">
+              <img src="/papers/images/TNNLS.png" class="img-responsive" alt="">
             </div>
           <div class="description">
             <p class="title">Rethinking training strategy in stereo matching</p>
