--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     and my B.E. degree, advised by Prof. <a href="https://scholar.google.com/citations?user=fddAbqsAAAAJ&hl=zh-CN">Yuchao Dai</a>,
     at the School of Electronics and Information, Northwestern Polytechnical University in 2019.</p>
 
-<p> My research mainly focuses on depth estimation especially regarding the binocular depth estimation. I am also interested in 3D reconstruction (e.g. NeRF, 3D Gaussian Splatting) and AIGC (e.g. diffusion based text to video generation).
+<p> My research mainly focuses on depth estimation especially regarding the binocular depth estimation. I am also interested in 3D reconstruction (e.g. NeRF, 3D Gaussian Splatting) and diffusion (e.g. diffusion based text to video generation).
 </p>
 
     <div class="row">
@@ -301,7 +301,7 @@
 <div class="row">
   
     <div class="col-lg-12">
-      <h1>Publications</h1>
+      <h1>Selected Publications</h1>
     </div>
     <div class="row">
         <ul class="ul-papers">
@@ -639,12 +639,12 @@
 <!--<li><a href="https://ecampus.nwpu.edu.cn/main.html#/newsDetail?id=8aaa9912847fd1d201848d8123e952af&columnId=B9CC1F1E8A5C82B8E053650A280A0232"><b>Postgraduate "Academic Star" of Northwestern Polytechnic University</b></a>, 2022</li>-->
 <!--<li><a href="https://mp.weixin.qq.com/s/btPSFAqck-_ABQ0YOTsQKQ"><b>Second Prize of Huawei Academic Star Competition</b></a>, 2022</li>-->
 <!--<li><a href="https://cvpr2022.thecvf.com/doctoral-consortium"><b>CVPR 2022 Doctoral Consortium</b></a> (Mentor: Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=YYH0BjEAAAAJ&view_op=list_works&sortby=pubdate">Marc Pollefeys</a>), 2022</li>-->
-<li><b>1<sup>st</sup></b> in Argoverse Stereo Competition (CVPR 2021 Workshop), 2021</li>
-<li><b>1<sup>st</sup></b> in stereo track of Robust Vision Challenge 2020 (ECCV2020 Workshop), 2020</li>
+<li><b>1<sup>st</sup></b> in <a href = "https://eval.ai/web/challenges/challenge-page/1704/overview">Argoverse Stereo Competition</a> (CVPR 2021 Workshop), 2021</li>
+<li><b>1<sup>st</sup></b> in stereo track of <a href = "http://www.robustvision.net/rvc2020.php">Robust Vision Challenge 2020</a> (ECCV2020 Workshop), 2020</li>
 <li>National Scholarship (Top 1% in Northwestern Polytechnical University), 2016-2017</li>
 <!--<li>Third-Class of Northwest Division of 13th Graduate Electronic Design Competition, 2018</li>-->
 <!--<li>Best Paper Candidate at IEEE 14th International Conference on Control and Automation (ICCA), 2018</li>-->
-<!--<li>Outstanding Undergraduate Student, Northwestern Polytechnical University, China, 2016</li>-->
+<li>Outstanding Undergraduate Student, Northwestern Polytechnical University, China, 2019</li>
 <!--<li>Outstanding Volunteer of 12th International Conference on Intelligent Unmanned Systems, 2016</li>-->
 <!--<li>First-Class Academic Scholarship of Northwestern Polytechnical University, 2013-2020</li>-->
 </ul>
@@ -659,7 +659,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-      <h1>Academic Activities</h1>
+      <h1>Reviewer</h1>
 <!--      <h2 id="talks">Talks</h2>-->
 <ul>
 
@@ -677,7 +677,10 @@
 <!--</ul>-->
 <!--      <h2 id="services">Services</h2>-->
 <!--<ul>-->
-<li>Reviewer of TIP, TMI, PR, RAL, etc</li>
+    <li>IEEE Transactions on Image Processing (<b>TIP</b>)</li>
+    <li>IEEE Transactions on Medical Imaging (<b>TMI</b>)</li>
+    <li>Pattern Recognition (<b>PR</b>)</li>
+    <li>IEEE Robotics and Automation Letters (<b>RAL</b>)</li>
 </ul>
     </div>
 </div>
