--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link " href="/#activities" data-target="#activities"><span>Activities</span></a>
+          <a class="nav-link " href="/#activities" data-target="#activities"><span>Reviewers</span></a>
         </li>
 
       </ul>
@@ -251,49 +251,98 @@
 
 
 
-<section id="experience" class="home-section wg-blank   " style="padding: 10px 0 10px 0;" >
+  <section id="experience" class="home-section wg-blank   " style="padding: 10px 0 10px 0;" >
 <div class="container">
 
 <div class="row">
     <div class="col-lg-12">
-    <h1>Project Experiences</h1>
+    <h1>Research Highlights</h1>
       <!-- <h3 id="experience">Research Experiences</h3> -->
 <ul>
-<li> <div style="float:left"><b>Motion and Depth Estimation of Stereo Rolling Shutter Camera</b></div> <div style="float:right">Apr 2019 - Sep 2022</div> <br>
-   DJI, Shenzhen <br>
-   Principal Investigator</a>
-</li>
-  
-<li> <div style="float:left"><b>Rolling Shutter Temporal Super-Resolution and High-Quality 3D Reconstruction</b></div> <div style="float:right">Jan 2023 - Dec 2026</div> <br>
-   National Natural Science Foundation of China <br>
-   Principal Investigator</a>
-</li>
+<li><b>Publication:</b>: 7 papers in top-tier conferences and journals with more than 200 citations, including 3 first
+authored papers (1 CVPR, 1 ECCV oral, and 1 TPAMI). </li>
+<li><b>Competition:</b> Two championships in top-tier conferences’workshop challenges, i.e., CVPR2021 Argoverse Stereo Competition and ECCV2020 Robust Vision Challenge. </li>
+<li><b>Open source:</b> I am the person in charge of paddle’s official repo: paddle depth, which is a lightweight
+toolkit for depth information sensing, i.e., depth super resolution, depth completion, monocular depth estimation, and stereo depth estimation </li>
+<!--<li> <div style="float:left"><b>Motion and Depth Estimation of Stereo Rolling Shutter Camera</b></div> <div style="float:right">Apr 2019 - Sep 2022</div> <br>-->
+<!--   DJI, Shenzhen <br>-->
+<!--   Principal Investigator</a>-->
+<!--</li>-->
 
-<li> <div style="float:left"><b>Monocular Dense 3D Reconstruction of Complex Dynamic Scenes</b></div> <div style="float:right">Jan 2019 - Dec 2022</div> <br>
-   National Natural Science Foundation of China <br>
-   Key personnel for localization and reconstruction based on monocular videos</a>
-</li>
+<!--<li> <div style="float:left"><b>Rolling Shutter Temporal Super-Resolution and High-Quality 3D Reconstruction</b></div> <div style="float:right">Jan 2023 - Dec 2026</div> <br>-->
+<!--   National Natural Science Foundation of China <br>-->
+<!--   Principal Investigator</a>-->
+<!--</li>-->
 
-<li> <div style="float:left"><b>Outdoor Urban Level Positioning</b></div> <div style="float:right">Jun 2018 - Jun 2021</div> <br>
-   Huawei, Xi'an <br>
-   Key personnel for multi-sensor calibration and data acquisition</a>
-</li>
+<!--<li> <div style="float:left"><b>Monocular Dense 3D Reconstruction of Complex Dynamic Scenes</b></div> <div style="float:right">Jan 2019 - Dec 2022</div> <br>-->
+<!--   National Natural Science Foundation of China <br>-->
+<!--   Key personnel for localization and reconstruction based on monocular videos</a>-->
+<!--</li>-->
 
-<li> <div style="float:left"><b>Autonomous Perception and Intelligent Flight Technology</b></div> <div style="float:right">Jun 2017 - Dec 2018</div> <br>
-   Innovation Special Zone Project <br>
-   Key personnel for outfield experiments of quadrotor-based obstacle detection and avoidance</a>
-</li>
+<!--<li> <div style="float:left"><b>Outdoor Urban Level Positioning</b></div> <div style="float:right">Jun 2018 - Jun 2021</div> <br>-->
+<!--   Huawei, Xi'an <br>-->
+<!--   Key personnel for multi-sensor calibration and data acquisition</a>-->
+<!--</li>-->
 
-<li> <div style="float:left"><b>Dynamic Autonomous Calibration of Distributed Multi-Camera Arrays</b></div> <div style="float:right">Jan 2017 - Dec 2018</div> <br>
-   Natural Science Foundation of Shaanxi Province <br>
-   Key personnel for principle analysis and code debugging of multi-camera SLAM</a>
-</li>
-  
+<!--<li> <div style="float:left"><b>Autonomous Perception and Intelligent Flight Technology</b></div> <div style="float:right">Jun 2017 - Dec 2018</div> <br>-->
+<!--   Innovation Special Zone Project <br>-->
+<!--   Key personnel for outfield experiments of quadrotor-based obstacle detection and avoidance</a>-->
+<!--</li>-->
+
+<!--<li> <div style="float:left"><b>Dynamic Autonomous Calibration of Distributed Multi-Camera Arrays</b></div> <div style="float:right">Jan 2017 - Dec 2018</div> <br>-->
+<!--   Natural Science Foundation of Shaanxi Province <br>-->
+<!--   Key personnel for principle analysis and code debugging of multi-camera SLAM</a>-->
+<!--</li>-->
+
 </ul>
     </div>
 </div>
     </div>
   </section>
+
+<!--<section id="experience" class="home-section wg-blank   " style="padding: 10px 0 10px 0;" >-->
+<!--<div class="container">-->
+
+<!--<div class="row">-->
+<!--    <div class="col-lg-12">-->
+<!--    <h1>Project Experiences</h1>-->
+<!--      &lt;!&ndash; <h3 id="experience">Research Experiences</h3> &ndash;&gt;-->
+<!--<ul>-->
+<!--<li> <div style="float:left"><b>Motion and Depth Estimation of Stereo Rolling Shutter Camera</b></div> <div style="float:right">Apr 2019 - Sep 2022</div> <br>-->
+<!--   DJI, Shenzhen <br>-->
+<!--   Principal Investigator</a>-->
+<!--</li>-->
+<!--  -->
+<!--<li> <div style="float:left"><b>Rolling Shutter Temporal Super-Resolution and High-Quality 3D Reconstruction</b></div> <div style="float:right">Jan 2023 - Dec 2026</div> <br>-->
+<!--   National Natural Science Foundation of China <br>-->
+<!--   Principal Investigator</a>-->
+<!--</li>-->
+
+<!--<li> <div style="float:left"><b>Monocular Dense 3D Reconstruction of Complex Dynamic Scenes</b></div> <div style="float:right">Jan 2019 - Dec 2022</div> <br>-->
+<!--   National Natural Science Foundation of China <br>-->
+<!--   Key personnel for localization and reconstruction based on monocular videos</a>-->
+<!--</li>-->
+
+<!--<li> <div style="float:left"><b>Outdoor Urban Level Positioning</b></div> <div style="float:right">Jun 2018 - Jun 2021</div> <br>-->
+<!--   Huawei, Xi'an <br>-->
+<!--   Key personnel for multi-sensor calibration and data acquisition</a>-->
+<!--</li>-->
+
+<!--<li> <div style="float:left"><b>Autonomous Perception and Intelligent Flight Technology</b></div> <div style="float:right">Jun 2017 - Dec 2018</div> <br>-->
+<!--   Innovation Special Zone Project <br>-->
+<!--   Key personnel for outfield experiments of quadrotor-based obstacle detection and avoidance</a>-->
+<!--</li>-->
+
+<!--<li> <div style="float:left"><b>Dynamic Autonomous Calibration of Distributed Multi-Camera Arrays</b></div> <div style="float:right">Jan 2017 - Dec 2018</div> <br>-->
+<!--   Natural Science Foundation of Shaanxi Province <br>-->
+<!--   Key personnel for principle analysis and code debugging of multi-camera SLAM</a>-->
+<!--</li>-->
+<!--  -->
+<!--</ul>-->
+<!--    </div>-->
+<!--</div>-->
+<!--    </div>-->
+<!--  </section>-->
 
   <section id="papers" class="home-section wg-papers   " style="padding: 20px 0 20px 0;" >
     <div class="container">
