--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@
 <p> My research mainly focuses on depth estimation especially regarding the binocular depth estimation. I am also interested in 3D reconstruction (e.g. NeRF, 3D Gaussian Splatting) and diffusion (e.g. diffusion based text to video generation).
 </p>
 
+<p> <span style="color:blue;">We’re actively recruiting interns in 3D reconstruction and diffusion fields. Please drop me an email via shenzhelun@pku.edu.cn </span>
+</p>
+
+
+
     <div class="row">
 
       <div class="col-md-6">
@@ -263,7 +268,7 @@
 authored papers (1 CVPR, 1 ECCV oral, and 1 TPAMI). </li>
 <li><b>Competition:</b> Two championships in top-tier conferences’workshop challenges, i.e., CVPR2021 Argoverse Stereo Competition and ECCV2020 Robust Vision Challenge. </li>
 <li><b>Open source:</b> I am the person in charge of paddle’s official repo: paddle depth, which is a lightweight
-toolkit for depth information sensing, i.e., depth super resolution, depth completion, monocular depth estimation, and stereo depth estimation </li>
+toolkit for depth information sensing, i.e., depth super resolution, depth completion, monocular depth estimation, and stereo depth estimation. </li>
 <!--<li> <div style="float:left"><b>Motion and Depth Estimation of Stereo Rolling Shutter Camera</b></div> <div style="float:right">Apr 2019 - Sep 2022</div> <br>-->
 <!--   DJI, Shenzhen <br>-->
 <!--   Principal Investigator</a>-->
