--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
           <a class="nav-link " href="/#about" data-target="#about"><span>Home</span></a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link " href="/#experience" data-target="#experience"><span>Projects</span></a>
-        </li>
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link " href="/#experience" data-target="#experience"><span>Projects</span></a>-->
+<!--        </li>-->
         
         <li class="nav-item">
           <a class="nav-link " href="/#papers" data-target="#papers"><span>Publications</span></a>
@@ -184,7 +184,7 @@
 <p> My research mainly focuses on depth estimation especially regarding the binocular depth estimation. I am also interested in 3D reconstruction (e.g. NeRF, 3D Gaussian Splatting) and diffusion (e.g. diffusion based text to video generation).
 </p>
 
-<p> <span style="color:blue;">We’re actively recruiting interns in 3D reconstruction and diffusion fields. Please drop me an email via shenzhelun@pku.edu.cn </span>
+<p> <span style="color:blue;">We’re actively recruiting interns in 3D reconstruction and diffusion fields. Feel free to contact with me via shenzhelun@pku.edu.cn </span>
 </p>
 
 
@@ -264,10 +264,10 @@
     <h1>Research Highlights</h1>
       <!-- <h3 id="experience">Research Experiences</h3> -->
 <ul>
-<li><b>Publication:</b>: 7 papers in top-tier conferences and journals with more than 200 citations, including 3 first
+<li><b>Publication:</b>: 7 papers in top-tier conferences and journals with nearly 300 citations, including 3 first
 authored papers (1 CVPR, 1 ECCV oral, and 1 TPAMI). </li>
 <li><b>Competition:</b> Two championships in top-tier conferences’workshop challenges, i.e., CVPR2021 Argoverse Stereo Competition and ECCV2020 Robust Vision Challenge. </li>
-<li><b>Open source:</b> I am the person in charge of paddle’s official repo: paddle depth, which is a lightweight
+<li><b>Open source:</b> Owner of paddle’s official repo: <a href = "https://github.com/PaddlePaddle/PaddleDepth">Paddle Depth</a>, which is a lightweight
 toolkit for depth information sensing, i.e., depth super resolution, depth completion, monocular depth estimation, and stereo depth estimation. </li>
 <!--<li> <div style="float:left"><b>Motion and Depth Estimation of Stereo Rolling Shutter Camera</b></div> <div style="float:right">Apr 2019 - Sep 2022</div> <br>-->
 <!--   DJI, Shenzhen <br>-->
