--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <!--<p> My research mainly focuses on camera pose estimation, image rectification, temporal super-resolution, and 3D reconstruction, especially regarding the rolling shutter camera. I am also interested in low-level geometric problems (e.g. structure from motion, SLAM) and image restoration tasks (e.g. deblurring).-->
 <!--</p>-->
-<p>I am currently a senior researcher at Baidu. Before that, I received my master degree in signal and information processing from Peking University in 2022
+<p>I am currently a senior researcher at Intelligent Driving Group of Baidu. Before that, I received my master degree in signal and information processing from Peking University in 2022
     and my B.E. degree, advised by Prof. <a href="https://scholar.google.com/citations?user=fddAbqsAAAAJ&hl=zh-CN">Yuchao Dai</a>,
     at the School of Electronics and Information, Northwestern Polytechnical University in 2019.</p>
 
@@ -368,7 +368,7 @@ toolkit for depth information sensing, i.e., depth super resolution, depth compl
             <p class="title">Digging Into Uncertainty-Based Pseudo-Label for Robust Stereo Matching</p>
             <p class="authors"><b>Zhelun Shen</b>, Xibin Song, Yuchao Dai, Dingfu Zhou, Zhibo Rao, Liangjun Zhang</p>
 <!--            <p class="authors"><b>Bin Fan</b>, Yuchao Dai, Hongdong Li</p>-->
-            <p class="institution">IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2024 <span style="font-weight:lighter"></span></p>
+            <p class="institution">IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2023 <span style="font-weight:lighter"></span></p>
             <p class="resources">
               [
                 <a href = "https://arxiv.org/pdf/2307.16509.pdf">Paper</a> | <a href = "https://github.com/gallenszl/UCFNet">Code</a>
