--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
 
 <!--<p> My research mainly focuses on camera pose estimation, image rectification, temporal super-resolution, and 3D reconstruction, especially regarding the rolling shutter camera. I am also interested in low-level geometric problems (e.g. structure from motion, SLAM) and image restoration tasks (e.g. deblurring).-->
 <!--</p>-->
-<p>I am currently a senior researcher at Intelligent Driving Group of Baidu. Before that, I received my master degree in signal and information processing from Peking University in 2022
+<p>I am currently a senior researcher at Intelligent Driving Group (IDG) of Baidu. Before that, I received my master degree in signal and information processing from Peking University in 2022
     and my B.E. degree, advised by Prof. <a href="https://scholar.google.com/citations?user=fddAbqsAAAAJ&hl=zh-CN">Yuchao Dai</a>,
     at the School of Electronics and Information, Northwestern Polytechnical University in 2019.</p>
 
-<p> My research mainly focuses on depth estimation especially regarding the binocular depth estimation. I am also interested in 3D reconstruction (e.g. NeRF, 3D Gaussian Splatting) and diffusion (e.g. diffusion based text to video generation).
+<p> My research mainly focuses on depth estimation, especially regarding binocular depth estimation. I am also interested in 3D reconstruction (e.g. NeRF, 3D Gaussian Splatting) and diffusion (e.g. diffusion-based text to video generation).
 </p>
 
-<p> <span style="color:blue;">We’re actively recruiting interns in 3D reconstruction and diffusion fields. Feel free to contact with me via shenzhelun@pku.edu.cn </span>
+<p> <span style="color:blue;">We’re actively recruiting interns in 3D reconstruction and diffusion fields. Feel free to contact me via shenzhelun@pku.edu.cn </span>
 </p>
 
 
