--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     and my B.E. degree, advised by Prof. <a href="https://scholar.google.com/citations?user=fddAbqsAAAAJ&hl=zh-CN">Yuchao Dai</a>,
     at the School of Electronics and Information, Northwestern Polytechnical University in 2019.</p>
 
-<p> My research mainly focuses on depth estimation, especially regarding binocular depth estimation. I am also interested in Generative AI, especially 3D-Aware Controllable Video Generation.
+<p> My earlier research centered on depth estimation, especially binocular depth estimation. Recently, I have been exploring generative AI, focusing on integrating generation and perception/reconstruction models for 3D applications.
 </p>
 
 
