--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <h1>Research Highlights</h1>
       <!-- <h3 id="experience">Research Experiences</h3> -->
 <ul>
-<li><b>Publication:</b>: 7 papers in top-tier conferences and journals with nearly 300 citations, including 3 first
+<li><b>Publication:</b>: 7 papers in top-tier conferences and journals with more than 800 citations, including 3 first
 authored papers (1 CVPR, 1 ECCV oral, and 1 TPAMI). </li>
 <li><b>Competition:</b> Two championships in top-tier conferences’workshop challenges, i.e., CVPR2021 Argoverse Stereo Competition and ECCV2020 Robust Vision Challenge. </li>
 <li><b>Open source:</b> Owner of paddle’s official repo: <a href = "https://github.com/PaddlePaddle/PaddleDepth">Paddle Depth</a>, which is a lightweight
